When a script has dependencies, all are checked and reported at once rather than being displayed one at a time. This makes complex applications like Rails easier to setup.
When scheduled backups are sent to their domain owners as well, each owner only receives the backup messages related to the domains they own.
Added script installers for Trac and MoinMoin, contributed by Jannis Leidel.
---- Changes since 3.57 ----
Mailbox users' passwords are now shown in a separate popup window, rather than on the Edit Mailbox page where anyone can see them.
Updated the SugarCRM installer to 5.0.0e, ZenPhoto to 1.1.6, Magento to 1.0.19870.1, Squirrelmail to 1.4.15, and Piwik to 0.2.2.
Modified the 'View website via Webmin' feature to not munge offsite links, only those to the same domain.
The number of email messages delivered per minute and the number classified as spam or viruses can now be graphed on the System Statistics page.
Added links from the Status section of the System Information page to the Webmin modules for their particular servers, and additional stats where available.
If a migrated domain needs features that are not supported by the system, a warning message is displayed.
All new SSL certificate and key files how have 700 permissions, so that only the domain owner and Apache (which starts as root) can read them.
All Virtualmin command-line and remote API programs now participate in Webmin logging, so their invocation and changes can be viewed in the Webmin Actions Log module.
Plesk sub-domains are now imported as Virtualmin sub-servers.
Updated the Horde script installer to version 3.2, and all its associated sub-applications to their latest releases.
The $DNS_SERIAL variable can be used in templates, as an initial serial for new domains.