@@ -594,6 +594,32 @@ else {
 			}
 		&$second_print($text{'setup_done'});
 		}
+	if ($_[0]->{'home'} ne $_[1]->{'home'}) {
+		# Update session dir in php.ini files
+		local $mode;
+		if (defined(&get_domain_php_mode) &&
+		    ($mode = &get_domain_php_mode($_[0])) &&
+		    $mode ne "mod_php" &&
+		    &foreign_check("phpini")) {
+			&foreign_require("phpini", "phpini-lib.pl");
+			&$first_print($text{'save_apache10'});
+			foreach my $i (&list_domain_php_inis($_[0])) {
+				print STDERR "ini = $i->[0] $i->[1]\n";
+				local $pconf = &phpini::get_config($i->[1]);
+				local $sp = &phpini::find_value(
+						"session.save_path", $pconf);
+				if ($sp =~ /\Q$_[1]->{'home'}\E/) {
+					$sp =~ s/\Q$_[1]->{'home'}\E/$_[0]->{'home'}/g;
+					&phpini::save_directive($pconf,
+						"session.save_path", $sp);
+					&flush_file_lines($i->[1]);
+					print STDERR "new sp=$sp\n";
+					}
+				}
+			$rv++;
+			&$second_print($text{'setup_done'});
+			}
+		}
 	&release_lock_web($_[0]);
 	&create_framefwd_file($_[0]);
 	if (!$_[0]->{'ssl'}) {
