@@ -925,3 +925,4 @@ All Virtualmin command-line and remote API programs now participate in Webmin lo
 Plesk sub-domains are now imported as Virtualmin sub-servers.
 Updated the Horde script installer to version 3.2, and all its associated sub-applications to their latest releases.
 The $DNS_SERIAL variable can be used in templates, as an initial serial for new domains.
+When a domain's home directory is changed, update session.save_path in its php.ini files to match.
